added partial force-graph

--- a/src/force-graph/pages/index.html
+++ b/src/force-graph/pages/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/main.css">
-    <script type="text/javascript" language="javascript" src="../js/main.js"></script>
     <script type="text/javascript" language="javascript" src="../js/jQuery.js"></script>
     <title>Buisness Intelligence Project</title>
 </head>
@@ -42,11 +41,13 @@
             </div>
         </aside>
         <main id="mainArea">
-            <canvas id='landkarte'></canvas>
         </main>
     </div>
 </body>
 
 <script type="text/javascript" language="javascript" src="../js/onclick.js"></script>
+<!-- <script src="../js/resources/force-graph-master/src/force-graph.js"></script> -->
+
+<script src="//unpkg.com/force-graph"></script>
 
 </html>
